--- a/app/sampson/sampson.scss
+++ b/app/sampson/sampson.scss
@@ -18,6 +18,7 @@
 			color: #ffffff;
 			font-family: $header-font;
 			font-size: .2em;
+			line-height: 1.2em;
 		}
 	}
 	.phase1 {
